7032963: StoreCM shouldn't participate in store elimination

Reviewed-by: kvn